# auto-daily-report

./: CLAUDE.md  README.md  biome.json  index.html  package.json  vite.config.ts
src/: App.css  App.tsx  Settings.tsx  main.tsx  timerWorker.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Badge.tsx
